--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -22,4 +22,11 @@
         //text
         font-size: 16px;
     }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        //text
+        font-size: 14px;
+        line-height: 14px;
+    }
 }
