--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
     font-family: ' Museo ', sans-serif;
 }
 .container {
+    padding: 0;
     position: relative;
     max-width: 950px;
     margin: 0 auto;
@@ -15,6 +16,7 @@
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carusel';
+@import 'blocks/catalog';
 
 
 .hiden_media {
