add + adaptation section comments

--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -57,7 +57,7 @@
         padding: 20px 20px 26px 20px;
         overflow: hidden;
         margin-bottom: 20px;
-        margin-right: auto;
+        margin-right: 2%;
         &:nth-child(3n+3) {
             margin-right: 0;
         }
