--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -31,6 +31,15 @@
             }
         }
     }
+    .comments {
+        &__comment {
+            width: 65%;
+            margin-left: 30%;
+            &__img {
+                left: -190px;
+            }
+        }
+    }
 
 }
 @media (max-width: 767px) {
@@ -96,7 +105,7 @@
         }
     }
     .catalog {
-        padding-bottom: 89px;
+        padding-bottom: 63px;
         &__tabs {
             margin-top: 38px;
         }
@@ -157,6 +166,33 @@
         &_mini {
             width: 110px;
             height: 38px;
+        }
+    }
+    .comments {
+        padding-bottom: 31px;
+        &__comment {
+            &:nth-child(2) {
+                margin-top: 47px;
+            }
+            &__img {
+                width: 137px;
+                height: 137px;
+                left: -156px;
+            }
+            &__name {
+                font-size: 16px;
+                line-height: 16px;
+            }
+            &__subtitle {
+                margin-top: 9px;
+                font-size: 12px;
+                line-height: 12px;
+            }
+            &__descr {
+                font-size: 14px;
+                line-height: 16px;
+                margin-top: 17px;
+            }
         }
     }
     
@@ -331,6 +367,40 @@
                     margin-top: 18px;
                     line-height: 12px;
                 }
+            }
+        }
+    }
+    .comments {
+        padding-bottom: 11px;
+        &__comment {
+            margin: 0 auto;
+            width: 80%;
+            &:nth-child(2) {
+                margin-top: 27px;
+            }
+            &__img {
+                position: relative;
+                display: block;
+                margin: 0 auto;
+                left: 0;
+            }
+            &__name {
+                font-size: 14px;
+                line-height: 14px;
+                text-align: center;
+                margin-top: 12px;
+            }
+            &__subtitle {
+                margin-top: 8px;
+                font-size: 11px;
+                line-height: 11px;
+                text-align: center;
+            }
+            &__descr {
+                font-size: 12px;
+                line-height: 14px;
+                margin-top: 15px;
+                text-align: center;
             }
         }
     }
