--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -9,6 +9,11 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+    transition: 0.2s all;
+    cursor: pointer;
+    &:hover {
+        box-shadow: 3px -3px 20px rgba(218, 14, 14, 0.76);
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
