--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -43,6 +43,14 @@
     &_mini {
         min-height: 140px;
     }
+    .error {      
+        border: 1px solid red;       
+    }
+    label.error {
+        border: none;
+        margin-bottom: 15px;
+        text-align: center;
+    }
 }
 
 #consultation, #order, #thanks {
